fix(merlin-www-main-navigation): Fix spacing issues and invert gallery nav colours (#17)

--- a/packages/merlin-www-main-navigation/sass/tatler/_base.scss
+++ b/packages/merlin-www-main-navigation/sass/tatler/_base.scss
@@ -128,6 +128,7 @@
     background-color: $white;
 
     &.is-stuck {
+        border: 0;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     }
 }
